@@ -1,9 +1,7 @@
 package com.tissue.unit.service;
 
-import static org.assertj.core.api.Assertions.*;
 import static org.mockito.Mockito.*;
 
-import java.util.Arrays;
 import java.util.List;
 
 import org.junit.jupiter.api.DisplayName;
@@ -15,14 +13,17 @@ import org.mockito.junit.jupiter.MockitoExtension;
 
 import com.tissue.api.issue.application.service.reader.IssueReader;
 import com.tissue.api.issue.domain.event.IssueCreatedEvent;
-import com.tissue.api.issue.domain.event.IssueUpdatedEvent;
 import com.tissue.api.issue.domain.model.Issue;
 import com.tissue.api.issue.domain.model.enums.IssueType;
+import com.tissue.api.member.domain.model.Member;
 import com.tissue.api.notification.application.eventhandler.NotificationEventHandler;
 import com.tissue.api.notification.application.service.command.NotificationCommandService;
 import com.tissue.api.notification.application.service.command.NotificationProcessor;
 import com.tissue.api.notification.application.service.command.NotificationTargetService;
+import com.tissue.api.notification.domain.model.Notification;
+import com.tissue.api.notification.domain.model.vo.NotificationMessage;
 import com.tissue.api.notification.domain.service.message.NotificationMessageFactory;
+import com.tissue.api.notification.infrastructure.repository.ActivityLogRepository;
 import com.tissue.api.workspacemember.application.service.command.WorkspaceMemberReader;
 import com.tissue.api.workspacemember.domain.model.WorkspaceMember;
 import com.tissue.api.workspacemember.infrastructure.repository.WorkspaceMemberRepository;
@@ -51,6 +52,9 @@ class NotificationEventHandlerTest {
 	@Mock
 	private NotificationMessageFactory notificationMessageFactory;
 
+	@Mock
+	private ActivityLogRepository activityLogRepository;
+
 	@InjectMocks
 	private NotificationEventHandler notificationEventHandler;
 
@@ -58,118 +62,38 @@ class NotificationEventHandlerTest {
 	@DisplayName("이슈 생성 이벤트 발생 시 워크스페이스 멤버들에게 알림이 처리되어야 함")
 	void handleIssueCreated_ShouldProcessNotificationForAllWorkspaceMembers() {
 		// given
-		Long issueId = 1L;
-		String issueKey = "ISSUE-1";
 		String workspaceCode = "TESTCODE";
 		Long actorId = 123L;
-		IssueType issueType = IssueType.STORY;
 
-		// Issue 모의 설정
 		Issue issue = mock(Issue.class);
-		when(issue.getId()).thenReturn(issueId);
-		when(issue.getIssueKey()).thenReturn(issueKey);
+		when(issue.getIssueKey()).thenReturn("ISSUE-1");
 		when(issue.getWorkspaceCode()).thenReturn(workspaceCode);
-		when(issue.getType()).thenReturn(issueType);
+		when(issue.getType()).thenReturn(IssueType.STORY);
 
-		// 이벤트 생성
 		IssueCreatedEvent event = IssueCreatedEvent.createEvent(issue, actorId);
 
-		// 워크스페이스 멤버 모의 설정
-		List<WorkspaceMember> members = Arrays.asList(
-			mock(WorkspaceMember.class),
-			mock(WorkspaceMember.class)
-		);
+		WorkspaceMember wm1 = mock(WorkspaceMember.class);
+		WorkspaceMember wm2 = mock(WorkspaceMember.class);
+		when(wm1.getMember()).thenReturn(mock(Member.class));
+		when(wm2.getMember()).thenReturn(mock(Member.class));
+		List<WorkspaceMember> members = List.of(wm1, wm2);
 
-		// targetResolver가 워크스페이스 멤버 목록을 반환하도록 설정
 		when(targetService.getWorkspaceWideMemberTargets(workspaceCode)).thenReturn(members);
+
+		NotificationMessage msg = new NotificationMessage("title", "body");
+		when(notificationMessageFactory.createMessage(event)).thenReturn(msg);
+
+		Notification notification1 = mock(Notification.class);
+		Notification notification2 = mock(Notification.class);
+
+		when(notificationService.createNotification(eq(event), anyLong(), eq(msg)))
+			.thenReturn(notification1, notification2);
 
 		// when
 		notificationEventHandler.handleIssueCreated(event);
 
 		// then
-		verify(targetService).getWorkspaceWideMemberTargets(workspaceCode);
-		verify(notificationProcessor).processNotification(event, members);
-	}
-
-	@Test
-	@DisplayName("이슈 업데이트 이벤트 발생 시 이슈 구독자에게 알림이 처리되어야 함")
-	void handleIssueUpdated_ShouldProcessNotificationForIssueSubscribers() {
-		// given
-		Long issueId = 1L;
-		String issueKey = "ISSUE-1";
-		String workspaceCode = "TESTCODE";
-		Long actorId = 123L;
-		IssueType issueType = IssueType.STORY;
-		String title = "Test Issue";
-
-		// Issue 모의 설정
-		Issue issue = mock(Issue.class);
-		when(issue.getId()).thenReturn(issueId);
-		when(issue.getIssueKey()).thenReturn(issueKey);
-		when(issue.getWorkspaceCode()).thenReturn(workspaceCode);
-		when(issue.getType()).thenReturn(issueType);
-		when(issue.getTitle()).thenReturn(title);
-		when(issue.getStoryPoint()).thenReturn(5);
-
-		// 이벤트 생성
-		IssueUpdatedEvent event = IssueUpdatedEvent.createEvent(issue, null, actorId);
-
-		// 이슈 구독자 모의 설정
-		List<WorkspaceMember> subscribers = Arrays.asList(
-			mock(WorkspaceMember.class),
-			mock(WorkspaceMember.class)
-		);
-
-		// targetResolver가 이슈 구독자 목록을 반환하도록 설정
-		when(targetService.getIssueSubscriberTargets(issueKey, workspaceCode)).thenReturn(subscribers);
-
-		// when
-		notificationEventHandler.handleIssueUpdated(event);
-
-		// then
-		verify(targetService).getIssueSubscriberTargets(issueKey, workspaceCode);
-		verify(notificationProcessor).processNotification(event, subscribers);
-	}
-
-	@Test
-	@DisplayName("NotificationProcessor에서 예외가 발생해도 이벤트 핸들러는 예외를 전파하지 않아야 함")
-	void handleIssueCreated_WhenProcessorThrowsException_ShouldNotPropagateException() {
-		// given
-		Long issueId = 1L;
-		String issueKey = "ISSUE-1";
-		String workspaceCode = "TESTCODE";
-		Long actorId = 123L;
-		IssueType issueType = IssueType.STORY;
-
-		// Issue 모의 설정
-		Issue issue = mock(Issue.class);
-		when(issue.getId()).thenReturn(issueId);
-		when(issue.getIssueKey()).thenReturn(issueKey);
-		when(issue.getWorkspaceCode()).thenReturn(workspaceCode);
-		when(issue.getType()).thenReturn(issueType);
-
-		// 이벤트 생성
-		IssueCreatedEvent event = IssueCreatedEvent.createEvent(issue, actorId);
-
-		// 워크스페이스 멤버 모의 설정
-		List<WorkspaceMember> members = Arrays.asList(
-			mock(WorkspaceMember.class),
-			mock(WorkspaceMember.class)
-		);
-
-		// targetResolver가 워크스페이스 멤버 목록을 반환하도록 설정
-		when(targetService.getWorkspaceWideMemberTargets(workspaceCode)).thenReturn(members);
-
-		// processor가 예외를 던지도록 설정
-		doThrow(new RuntimeException("Test exception"))
-			.when(notificationProcessor).processNotification(event, members);
-
-		// when & then
-		assertThatThrownBy(() -> notificationEventHandler.handleIssueCreated(event))
-			.isInstanceOf(RuntimeException.class);
-
-		// 호출 확인
-		verify(targetService).getWorkspaceWideMemberTargets(workspaceCode);
-		verify(notificationProcessor).processNotification(event, members);
+		verify(notificationService, times(2)).createNotification(eq(event), anyLong(), eq(msg));
+		verify(notificationProcessor, times(2)).process(any(Notification.class));
 	}
 }
